# tsforge

./: .env.example  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
apps/cli/: package.json
apps/cli/src/: bin.ts
apps/web/: .cta.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: routeTree.gen.ts  router.tsx  styles.css
apps/web/src/lib/: auth.ts
apps/web/src/routes/: __root.tsx  index.tsx  login.tsx
apps/web/src/routes/api/: conversions.ts  session.ts
apps/web/src/routes/api/auth/: $.ts
emltpl-to-oft/: emltpl_to_oft.py
lib/: __init__.py
lib/emltpl_to_oft/: __init__.py  cfb.py  cli.py  mapi.py  parser.py
luts/: README.md
luts/custom/: SVM_Florida_Coastal_v1.cube
pyforge/: __init__.py
pyforge/emltpl_to_oft/: __init__.py  cfb.py  cli.py
scratch/: README.md
scripts/: README.md
scripts/batch-grade/: README.md  package.json  tsconfig.json
scripts/batch-grade/src/: bin.ts
scripts/email-template-converter/: README.md  package.json
scripts/email-template-converter/src/: index.ts
scripts/email-template-converter/test/: cli.test.ts
scripts/signal-fit/: README.md  package.json  tsconfig.json
scripts/signal-fit/src/: bin.ts  index.ts
scripts/signal-fit/test/: index.test.ts
tests/: test_cli.py  test_emltpl_to_oft.py
tools/: emltpl_to_oft.py
